# My-Auth-Fastapi

./: .env  Dockerfile  Taskfile.yaml  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 147f4e5289f9_init_schema.py  bf02b0aafc3d_username_changed_to_full_name.py
app/: main.py
app/core/: config.py  deps.py  exceptions.py  security.py
app/db/: mixins.py  session.py
app/db/models/: user_model.py
app/routers/: __init__.py  auth_router.py  google_oauth.py
app/schemas/: envelope.py  user_schema.py
app/services/: email_service.py
tests/: email_test.py
