[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "authlib>=1.6.4",
    "bcrypt>=4.3.0",
    "emails>=0.6",
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "mailtrap>=2.2.0",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.9",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.1",
    "sqlmodel>=0.0.25",
    "uvicorn[standard]>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "black>=23.0.0",
    "isort>=5.12.0"
]


[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "types-authlib>=1.6.4.20250920",
    "types-requests>=2.32.4.20250913",
]
